# ansible-rs

./: Cargo.toml  README.md  ansible_inventory_axum_run.sh  ansible_inventory_cloud.sh  ansible_inventory_server_axum_run.sh
ansible-inventory/: Cargo.toml  README.md
ansible-inventory-cloud/: Cargo.toml  README.md
ansible-inventory-cloud-cli/: Cargo.toml  README.md
ansible-inventory-cloud-cli/src/: args.rs  http.rs  lib.rs
ansible-inventory-cloud/demo_axum/: Cargo.toml
ansible-inventory-cloud/demo_axum/src/: main.rs
ansible-inventory-cloud/src/: lib.rs
ansible-inventory-cloud/src/http/: authentication.rs  host_handler.rs  hostname.rs  list_handler.rs  mod.rs
ansible-inventory-cloud/src/http/impl_axum/: host_handler.rs  list_handler.rs  mod.rs
ansible-inventory-cloud/tests/: impl_axum.rs
ansible-inventory/src/: data.rs  group.rs  host.rs  lib.rs
ansible-inventory/src/script_output/: host.rs  list.rs  mod.rs
ansible-inventory/tests/script_output_host_json_files/: README.md  sample_3.json
ansible-inventory/tests/script_output_list_json_files/: README.md  sample_1.json  sample_2_1.json  sample_2_2.json  sample_2_3.json  sample_3.json
