[package]
name = "ansible-inventory-cloud-cli"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Ansible Inventory Cloud Cli"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/ansible-rs"
homepage = "https://github.com/bk-rs/ansible-rs"
documentation = "https://docs.rs/ansible-inventory-cloud-cli"
keywords = []
categories = []
readme = "README.md"

[dependencies]
