[package]
name = "ansible-inventory-cloud"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Ansible Inventory Cloud"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/ansible-rs"
homepage = "https://github.com/bk-rs/ansible-rs"
documentation = "https://docs.rs/ansible-inventory-cloud"
keywords = []
categories = []
readme = "README.md"

[dependencies]
