[package]
name = "ansible-inventory-cloud"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Ansible Inventory Cloud"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/ansible-rs"
homepage = "https://github.com/bk-rs/ansible-rs"
documentation = "https://docs.rs/ansible-inventory-cloud"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["impl_axum"]

impl_axum = ["axum"]

[dependencies]
ansible-inventory = { version = "0.1", path = "../ansible-inventory" }

serde = { version = "1", default-features = false, features = ["std", "derive"] }

axum = { version = "0.6", default_features = false, features = ["json", "query", "headers"], optional = true }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
axum = { version = "0.6", default-features = false, features = ["http1", "tokio"] }

isahc = { version = "1", default-features = false }
serde_json = { version = "1" }

portpicker = { version = "0.1", default-features = false }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
