[package]
name = "ansible-inventory"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Ansible Inventory"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/ansible-rs"
homepage = "https://github.com/bk-rs/ansible-rs"
documentation = "https://docs.rs/ansible-inventory"
keywords = []
categories = []
readme = "README.md"

[dependencies]
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
serde-enum-str = { version = "0.3", default-features = false }

indexmap = { version = "1", default-features = false, features = ["serde-1"] }
wrapping-macro = { version = "0.2", default-features = false, features = ["std"] }
