[package]
name = "ansible-inventory-cloud-demo-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
ansible-inventory-cloud = { path = "..", features = ["impl_axum"] }

tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
axum = { version = "0.6", default-features = false, features = ["http1", "tokio"] }

pretty_env_logger = { version = "0.4" }
